--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -22,4 +22,10 @@
         android:layout_height="wrap_content"
         android:text="@string/btn_preview_text"/>
 
+    <Button
+        android:id="@+id/btn_about"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_about_text"/>
+
 </LinearLayout>
